--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "dependencies": {
-    "expo": "^51.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-web": "~0.19.6"
+    "babel-preset-expo": "^12.0.1",
+    "expo": "^52.0.9",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.2",
+    "expo-router": "^4.0.6",
+    "expo-status-bar": "~2.0.0",
+    "nativewind": "^2.0.11",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.25.2",
+    "tailwindcss": "^3.4.15"
   },
   "name": "my-app",
   "version": "1.0.0",
   "private": true,
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
